<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/game_result_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_b">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/well_done"
        android:padding="12dp"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/whiteColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:orientation="vertical"
        android:background="@drawable/bubble_white"
        android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congrats_new_password"
        android:paddingHorizontal="@dimen/helpful_text_padding_horizontal"
        android:paddingVertical="@dimen/helpful_text_padding_vertical"
        android:textSize="@dimen/helpful_text_font_size"/>

    <TextView
        android:id="@+id/passwordFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_margin="4dp"
        android:text="Dummy Text"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/source_sans_pro_regular"
        android:background="@drawable/bubble_white"
        android:layout_gravity="center"/>

        <Button
            android:id="@+id/copyButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/red_button_layout_height"
            android:background="@drawable/bubble_red"
            android:fitsSystemWindows="true"
            android:paddingHorizontal="8dp"
            android:text="@string/copy_button"
            android:textColor="@color/whiteColor"
            android:layout_gravity="center" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/vinyl"
        android:layout_width="@dimen/success_animation_height"
        android:layout_height="@dimen/success_animation_height"
        android:padding="8dp"
        android:layout_gravity="center"
        app:lottie_rawRes="@raw/vinylrecordblack"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:gravity="center">

    <Button
        android:id="@+id/anotherGoButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/red_button_layout_height"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/bubble_red"
        android:fitsSystemWindows="true"
        android:paddingHorizontal="8dp"
        android:text="@string/another_go"
        android:textColor="@color/whiteColor"/>

    <Button
        android:id="@+id/makeNewPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/red_button_layout_height"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="6dp"
        android:background="@drawable/bubble_red"
        android:fitsSystemWindows="true"
        android:paddingHorizontal="8dp"
        android:text="@string/make_new_button"
        android:textColor="@color/whiteColor"/>

    </LinearLayout>

    </LinearLayout>

</LinearLayout>