<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/taskOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_gravity="center"
        android:text="@string/taskOne"
        android:textStyle="bold"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/helpfulTextTaskOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/taskOneInputFullPassword"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/editTextRV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fitsSystemWindows="true"
            android:hapticFeedbackEnabled="true"/>

    </LinearLayout>

    <cdflynn.android.library.checkview.CheckView
        android:id="@+id/checkViewAnimation"
        android:layout_width="325dp"
        android:layout_height="325dp"
        android:layout_margin="32dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:checkView_strokeColor="@color/lightGreenColor"
        app:checkView_strokeWidth="14dp"/>

    <Button
        android:id="@+id/clearPassButton"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:fitsSystemWindows="true"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:paddingHorizontal="8dp"
        android:text="@string/clear_pass_button"
        android:textColor="@color/whiteColor"
        android:visibility="visible"
        android:background="@drawable/bubble_grey"/>

    <Button
        android:id="@+id/continueButtonTaskOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/lightGreenColor"
        android:text="@string/continue_button_one"
        android:textColor="@color/whiteColor"
        android:textAlignment="center"
        android:visibility="gone"/>

</LinearLayout>