<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_game_task_one"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.GameActivity">

        <TextView
            android:id="@+id/taskOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_gravity="center"
            android:text="@string/taskOne"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/helpfulTextTaskOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:text="@string/taskOneInputFullPassword"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/editTextRV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fitsSystemWindows="true"
                android:hapticFeedbackEnabled="true"/>

        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/checkViewAnimation"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:visibility="gone"
            app:lottie_rawRes="@raw/checkmarklightgreen"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

        <Button
            android:id="@+id/clearPassButton"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:fitsSystemWindows="true"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:paddingHorizontal="8dp"
            android:text="@string/clear_pass_button"
            android:textColor="@color/whiteColor"
            android:visibility="visible"
            android:background="@drawable/bubble_red"/>

        <Button
            android:id="@+id/continueButtonTaskOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/bubble"
            android:text="@string/continue_button_one"
            android:textColor="@color/whiteColor"
            android:textAlignment="center"
            android:visibility="gone"/>

</LinearLayout>