<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_layout_pass_gen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/main_content_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/takeAGoodLook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:text="@string/take_a_good_look"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/selectedTextFromLyric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            android:text="Dummy text"
            android:textSize="24sp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/generatedPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="8dp"
            android:text="Dummy text"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/triangle_shape"/>

        <LinearLayout
            android:id="@+id/green_bubble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bubble"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/numberOfCharacters"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp"
                        android:text="0%s"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="28sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:paddingBottom="8dp"
                        android:text="characters"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/cerebro" />

            </LinearLayout>

            <Button
                android:id="@+id/helpMeRemember"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:background="@drawable/bubble_red"
                android:paddingHorizontal="8dp"
                android:text="@string/next_level_button"
                android:textColor="@color/whiteColor" />

        </LinearLayout>

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loadingPass"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:visibility="visible"
        android:layout_marginTop="48dp"
        app:lottie_rawRes="@raw/loadinglock"
        app:lottie_autoPlay="true"/>

    <TextView
        android:id="@+id/justASec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/just_a_sec"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textColor="@color/colorAccent"
        android:visibility="visible"/>

    <LinearLayout
        android:id="@+id/bottom_view_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/lyricSelectionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/try_again_hint"
            android:textColor="@color/whiteColor" />

        <Button
            android:id="@+id/tryAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:background="@drawable/button_round"
            android:fitsSystemWindows="true"
            android:paddingHorizontal="8dp"
            android:text="@string/try_again_button"
            android:textColor="@color/whiteColor"/>

    </LinearLayout>

</LinearLayout>